[project]
name = "adversarial-boundary-explorer"
version = "0.1.0"
description = "Interactive adversarial decision boundary explorer for policymakers"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "plotly>=6.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.0.0",
    "adversarial-robustness-toolbox>=1.20.0",
    "numpy>=1.26.0",
]

[project.scripts]
serve = "streamlit:cli.main_run"

[tool.uv]
dev-dependencies = []
